--- a/style.css
+++ b/style.css
@@ -13,10 +13,10 @@
 }
 .bird {
     height: 8vh;
-    width: auto; /* Maintain aspect ratio */
+    width: auto; 
     position: fixed;
     top: 40vh;
-    left: 20vw; /* Adjust horizontal position for smaller screens */
+    left: 20vw; 
     z-index: 100;
 }
 .pipe_sprite {
@@ -24,10 +24,10 @@
     top: 40vh;
     left: 100vw;
     height: 70vh;
-    width: 10vw; /* Adjusted for better visibility on mobile */
+    width: 10vw;
     background: radial-gradient(lightgreen 50%, green);
     border: 5px solid black;
-    border-top: none; /* Make the pipes look like they're coming from the ground */
+    border-top: none;
 }
 .message {
     position: absolute;
@@ -35,18 +35,18 @@
     color: black;
     top: 50%;
     left: 50%;
-    font-size: 5vw; /* Responsive font size */
+    font-size: 5vw;
     transform: translate(-50%, -50%);
     text-align: center;
-    white-space: nowrap; /* Prevent text wrapping */
-    text-shadow: 2px 2px 4px #fff;
+    white-space: nowrap;
+    text-shadow: 2px 2px 4px #50645bff;
     font-weight: bold;
 }
 .controls-text {
     font-size: 3vw;
 }
 .messageStyle {
-    background: rgba(255, 255, 255, 0.8);
+    background: rgba(0, 150, 255, 0.6);
     padding: 30px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     border-radius: 10px;
@@ -54,28 +54,43 @@
 .score {
     position: fixed;
     z-index: 10;
-    height: 10vh;
-    font-size: 8vh;
-    font-weight: 100;
-    color: white;
-    -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color: black;
-    top: 0;
-    left: 0;
-    margin: 10px;
-    font-family: Arial, Helvetica, sans-serif;
+    top: 20px;
+    left: 20px;
+
+    display: flex;
+    align-items: center;
+    gap: 10px;
+
+    font-size: 5vh;
+    font-weight: bold;
+    color: #fff;
+    font-family: 'Press Start 2P', Arial, sans-serif;
+
+    padding: 10px 18px;
+    border-radius: 12px;
+
+    background: background: rgba(0, 150, 255, 0.6);
+
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
+
+    -webkit-text-stroke: 2px black;
+    text-shadow: 0px 0px 10px rgba(58, 57, 52, 0.9);
 }
+
 .score_val {
     color: gold;
-    font-weight: bold;
+    font-size: 5.5vh;
+    font-weight: 900;
+    text-shadow: 0px 0px 12px gold;
 }
+
 @media only screen and (max-width: 768px) {
     .bird {
-        height: 10vw; /* Increase bird size for smaller screens */
+        height: 10vw;
         left: 15vw;
     }
     .pipe_sprite {
-        width: 15vw; /* Increase pipe width for smaller screens */
+        width: 15vw;
         border-width: 3px;
     }
     .message {
@@ -84,5 +99,15 @@
     }
     .controls-text {
         font-size: 4vw;
+    }
+		 .score {
+        font-size: 3.5vh;
+        padding: 6px 12px;
+        border-radius: 8px;
+        gap: 6px;
+    }
+
+    .score_val {
+        font-size: 4vh;
     }
 }
